@@ -2,6 +2,9 @@ Cascading Change Log
 
 unreleased
 
+  Added skipIfSinkExists property to c.f.Flow. Set to true if the c.c.Cascade should skip the Flow instance even
+  if the sink is stale and not set to be deleted on initialization.
+
   Fixed c.t.h.HttpFileSystem that url escaped the ? prefixing the query string.
 
   Fixed bug where a join with duplicate taps was not recognized during job planning. Now an appropriate error
